Add Sub Category View

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "Cornerstone",
-  "version": "1.8.1",
+  "name": "DashConnect",
+  "version": "1.0.2",
   "meta": {
     "price": 0,
     "documentation_url": "https://support.bigcommerce.com/articles/Public/Cornerstone-Theme-Manual",
@@ -67,7 +67,7 @@
     "show_accept_mastercard": false,
     "show_accept_paypal": false,
     "show_accept_visa": false,
-    "product_list_display_mode": "grid",
+    "product_list_display_mode": "list",
     "logo-position": "center",
     "logo_size": "250x100",
     "logo_fontSize": 28,
@@ -299,8 +299,227 @@
           "home_garden"
         ]
       },
-      "images": {},
-      "settings": {}
+      "images": {
+      },
+      "settings": {
+        "amp_analytics_id": "",
+        "homepage_new_products_count": 12,
+        "homepage_featured_products_count": 8,
+        "homepage_top_products_count": 8,
+        "homepage_show_carousel": true,
+        "homepage_stretch_carousel_images": false,
+        "homepage_new_products_column_count": 4,
+        "homepage_featured_products_column_count": 4,
+        "homepage_top_products_column_count": 4,
+        "homepage_blog_posts_count": 3,
+        "productpage_videos_count": 8,
+        "productpage_reviews_count": 9,
+        "productpage_related_products_count": 10,
+        "productpage_similar_by_views_count": 10,
+        "categorypage_products_per_page": 12,
+        "brandpage_products_per_page": 12,
+        "searchpage_products_per_page": 12,
+        "show_product_quick_view": true,
+        "show_powered_by": true,
+        "shop_by_brand_show_footer": true,
+        "show_copyright_footer": true,
+        "show_accept_amex": false,
+        "show_accept_discover": false,
+        "show_accept_mastercard": false,
+        "show_accept_paypal": false,
+        "show_accept_visa": false,
+        "product_list_display_mode": "list",
+        "logo-position": "center",
+        "logo_size": "250x100",
+        "logo_fontSize": 28,
+        "logo-font": "Google_Oswald_300",
+        "brand_size": "190x250",
+        "gallery_size": "300x300",
+        "productgallery_size": "500x659",
+        "product_size": "500x659",
+        "productthumb_size": "100x100",
+        "thumb_size": "100x100",
+        "zoom_size": "1280x1280",
+        "blog_size": "190x250",
+        "default_image_brand": "/assets/img/BrandDefault.gif",
+        "default_image_product": "/assets/img/ProductDefault.gif",
+        "default_image_gift_certificate": "/assets/img/GiftCertificate.png",
+        "body-font": "Google_Karla_400",
+        "headings-font": "Google_Montserrat_400",
+        "fontSize-root": 14,
+        "fontSize-h1": 28,
+        "fontSize-h2": 25,
+        "fontSize-h3": 22,
+        "fontSize-h4": 20,
+        "fontSize-h5": 15,
+        "fontSize-h6": 13,
+        "applePay-button": "black",
+        "color-textBase": "#4f4f4f",
+        "color-textBase--hover": "#a5a5a5",
+        "color-textBase--active": "#a5a5a5",
+        "color-textSecondary": "#989898",
+        "color-textSecondary--hover": "#4f4f4f",
+        "color-textSecondary--active": "#4f4f4f",
+        "color-textLink": "#4f4f4f",
+        "color-textLink--hover": "#a5a5a5",
+        "color-textLink--active": "#a5a5a5",
+        "color-textHeading": "#2d2d2d",
+        "color-primary": "#4f4f4f",
+        "color-primaryDark": "#454545",
+        "color-primaryDarker": "#2d2d2d",
+        "color-primaryLight": "#a5a5a5",
+        "color-secondary": "#ffffff",
+        "color-secondaryDark": "#e8e8e8",
+        "color-secondaryDarker": "#e8e8e8",
+        "color-error": "#ff7d7d",
+        "color-errorLight": "#ffdddd",
+        "color-info": "#666666",
+        "color-infoLight": "#dfdfdf",
+        "color-success": "#69d66f",
+        "color-successLight": "#d5ffd8",
+        "color-warning": "#d4cb49",
+        "color-warningLight": "#fffdea",
+        "color-black": "#000000",
+        "color-white": "#ffffff",
+        "color-whitesBase": "#f8f8f8",
+        "color-grey": "#4f4f4f",
+        "color-greyDarkest": "#2d2d2d",
+        "color-greyDarker": "#454545",
+        "color-greyDark": "#666666",
+        "color-greyMedium": "#989898",
+        "color-greyLight": "#a5a5a5",
+        "color-greyLighter": "#dfdfdf",
+        "color-greyLightest": "#e8e8e8",
+        "button--default-color": "#454545",
+        "button--default-colorHover": "#666666",
+        "button--default-colorActive": "#454545",
+        "button--default-borderColor": "#dfdfdf",
+        "button--default-borderColorHover": "#989898",
+        "button--default-borderColorActive": "#454545",
+        "button--primary-color": "#ffffff",
+        "button--primary-colorHover": "#ffffff",
+        "button--primary-colorActive": "#ffffff",
+        "button--primary-backgroundColor": "#454545",
+        "button--primary-backgroundColorHover": "#666666",
+        "button--primary-backgroundColorActive": "#989898",
+        "button--disabled-color": "#ffffff",
+        "button--disabled-backgroundColor": "#dadada",
+        "button--disabled-borderColor": "#dadada",
+        "icon-color": "#4f4f4f",
+        "icon-color-hover": "#a5a5a5",
+        "button--icon-svg-color": "#4f4f4f",
+        "icon-ratingEmpty": "#dfdfdf",
+        "icon-ratingFull": "#454545",
+        "carousel-bgColor": "#ffffff",
+        "carousel-title-color": "#2d2d2d",
+        "carousel-description-color": "#2d2d2d",
+        "carousel-dot-color": "#2d2d2d",
+        "carousel-dot-color-active": "#666666",
+        "carousel-dot-bgColor": "#ffffff",
+        "carousel-arrow-color": "#989898",
+        "carousel-arrow-bgColor": "#ffffff",
+        "card-title-color": "#2d2d2d",
+        "card-title-color-hover": "#a5a5a5",
+        "card-figcaption-button-background": "#ffffff",
+        "card-figcaption-button-color": "#2d2d2d",
+        "card--alternate-backgroundColor": "#ffffff",
+        "card--alternate-borderColor": "#ffffff",
+        "card--alternate-color--hover": "#ffffff",
+        "form-label-font-color": "#666666",
+        "input-font-color": "#454545",
+        "input-border-color": "#dfdfdf",
+        "input-border-color-active": "#989898",
+        "input-bg-color": "#ffffff",
+        "input-disabled-bg": "#ffffff",
+        "select-bg-color": "#ffffff",
+        "select-arrow-color": "#828282",
+        "checkRadio-color": "#4f4f4f",
+        "checkRadio-backgroundColor": "#ffffff",
+        "checkRadio-borderColor": "#dfdfdf",
+        "alert-color": "#4f4f4f",
+        "alert-color-alt": "#ffffff",
+        "storeName-color": "#4f4f4f",
+        "body-bg": "#ffffff",
+        "header-backgroundColor": "#ffffff",
+        "footer-backgroundColor": "#ffffff",
+        "navUser-color": "#4f4f4f",
+        "navUser-color-hover": "#a5a5a5",
+        "navUser-dropdown-backgroundColor": "#ffffff",
+        "navUser-dropdown-borderColor": "#e8e8e8",
+        "navUser-indicator-backgroundColor": "#4f4f4f",
+        "navPages-color": "#4f4f4f",
+        "navPages-color-hover": "#a5a5a5",
+        "navPages-subMenu-backgroundColor": "#f2f2f2",
+        "navPages-subMenu-separatorColor": "#dfdfdf",
+        "dropdown--quickSearch-backgroundColor": "#e8e8e8",
+        "blockquote-cite-font-color": "#a5a5a5",
+        "container-border-global-color-base": "#e8e8e8",
+        "container-border-global-color-dark": "#454545",
+        "container-fill-base": "#ffffff",
+        "container-fill-dark": "#f2f2f2",
+        "label-backgroundColor": "#bfbfbf",
+        "label-color": "#ffffff",
+        "overlay-backgroundColor": "#2d2d2d",
+        "loadingOverlay-backgroundColor": "#ffffff",
+        "pace-progress-backgroundColor": "#989898",
+        "spinner-borderColor-dark": "#989898",
+        "spinner-borderColor-light": "#ffffff",
+        "hide_content_navigation": false,
+        "optimizedCheckout-header-backgroundColor": "#f7f7f7",
+        "optimizedCheckout-show-backgroundImage": false,
+        "optimizedCheckout-backgroundImage": "",
+        "optimizedCheckout-backgroundImage-size": "1000x400",
+        "optimizedCheckout-show-logo": "none",
+        "optimizedCheckout-logo": "",
+        "optimizedCheckout-logo-size": "250x100",
+        "optimizedCheckout-logo-position": "left",
+        "optimizedCheckout-headingPrimary-color": "#2d2d2d",
+        "optimizedCheckout-headingPrimary-font": "Google_Montserrat_400",
+        "optimizedCheckout-headingSecondary-color": "#2d2d2d",
+        "optimizedCheckout-headingSecondary-font": "Google_Montserrat_400",
+        "optimizedCheckout-body-backgroundColor": "#ffffff",
+        "optimizedCheckout-contentPrimary-color": "#4f4f4f",
+        "optimizedCheckout-contentPrimary-font": "Google_Karla_400",
+        "optimizedCheckout-contentSecondary-color": "#989898",
+        "optimizedCheckout-contentSecondary-font": "Google_Karla_400",
+        "optimizedCheckout-buttonPrimary-font": "Google_Karla_400",
+        "optimizedCheckout-buttonPrimary-color": "#ffffff",
+        "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
+        "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
+        "optimizedCheckout-buttonPrimary-backgroundColor": "#454545",
+        "optimizedCheckout-buttonPrimary-backgroundColorHover": "#666666",
+        "optimizedCheckout-buttonPrimary-backgroundColorActive": "#989898",
+        "optimizedCheckout-buttonPrimary-borderColor": "#454545",
+        "optimizedCheckout-buttonPrimary-borderColorHover": "#666666",
+        "optimizedCheckout-buttonPrimary-borderColorActive": "#989898",
+        "optimizedCheckout-buttonSecondary-font": "Google_Karla_400",
+        "optimizedCheckout-buttonSecondary-color": "#4f4f4f",
+        "optimizedCheckout-buttonSecondary-backgroundColor": "#ffffff",
+        "optimizedCheckout-buttonSecondary-borderColor": "#dfdfdf",
+        "optimizedCheckout-link-color": "#4496f6",
+        "optimizedCheckout-link-font": "Google_Karla_400",
+        "optimizedCheckout-discountBanner-backgroundColor": "#f5f5f5",
+        "optimizedCheckout-discountBanner-textColor": "#333333",
+        "optimizedCheckout-discountBanner-iconColor": "#333333",
+        "optimizedCheckout-orderSummary-backgroundColor": "#ffffff",
+        "optimizedCheckout-step-backgroundColor": "#4f4f4f",
+        "optimizedCheckout-step-textColor": "#ffffff",
+        "optimizedCheckout-form-textColor": "#666666",
+        "optimizedCheckout-formField-backgroundColor": "white",
+        "optimizedCheckout-formField-borderColor": "#989898",
+        "price_as_low_as": false,
+        "product_sale_badges": "none",
+        "color_badge_product_sale_badges": "#007dc6",
+        "color_text_product_sale_badges": "#ffffff",
+        "color_hover_product_sale_badges": "#000000",
+        "restrict_to_login": false,
+        "swatch_option_size": "22x22",
+        "social_icon_placement_top": true,
+        "social_icon_placement_bottom": "bottom_right",
+        "geotrust_ssl_common_name": "",
+        "geotrust_ssl_seal_size": "M",
+        "navigation_design": "simple"
+      }
     },
     {
       "name": "Bold",
